# storage/api-docs/api-docs.json
@@ -6,13 +6,13 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/dokter": {
+        "/api/dokters": {
             "get": {
                 "tags": [
                     "Dokter"
                 ],
                 "summary": "Get all doctors",
-                "operationId": "7470afc3ecdc948c80b78d87c9b7a397",
+                "operationId": "f659b4f44bbcfbf5cc13d0a3d43f3c97",
                 "responses": {
                     "200": {
                         "description": "Dokter retrieved successfully"
@@ -24,7 +24,7 @@
                     "Dokter"
                 ],
                 "summary": "Create a new doctor",
-                "operationId": "86845a036fc0a852519e70cf6e32bd86",
+                "operationId": "a5f031abd7c4a6f9d60d54213046055f",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -73,13 +73,13 @@
                 }
             }
         },
-        "/api/dokter/{id}": {
+        "/api/dokters/{id}": {
             "get": {
                 "tags": [
                     "Dokter"
                 ],
                 "summary": "Get doctor by ID",
-                "operationId": "9ae2099d069d0f5a9725591fc710c8bb",
+                "operationId": "c1cc6771473539b05a3323aa8fb92e4b",
                 "parameters": [
                     {
                         "name": "id",
@@ -104,7 +104,7 @@
                     "Dokter"
                 ],
                 "summary": "Update a doctor by ID",
-                "operationId": "edd333fea89bbd1ae8b1e28e4e4c5c16",
+                "operationId": "16f489010b0550009ada9b8af89b0ce8",
                 "parameters": [
                     {
                         "name": "id",
@@ -167,7 +167,7 @@
                     "Dokter"
                 ],
                 "summary": "Delete doctor by ID",
-                "operationId": "41eaf5da3f9fbe426dae7e87894feb96",
+                "operationId": "597e86f5a83b8671f07621574127a9ab",
                 "parameters": [
                     {
                         "name": "id",
@@ -184,6 +184,75 @@
                     },
                     "404": {
                         "description": "Dokter not found"
+                    }
+                }
+            }
+        },
+        "/api/dokters/spesialis/{spesialis}": {
+            "get": {
+                "tags": [
+                    "Dokter"
+                ],
+                "summary": "Ambil daftar dokter berdasarkan spesialis",
+                "operationId": "4e530b4cc2977bc21098eaf88e9a2975",
+                "parameters": [
+                    {
+                        "name": "spesialis",
+                        "in": "path",
+                        "description": "Spesialis dokter, misalnya: anak, gigi, umum",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Sukses mengambil data dokter",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Data dokter ditemukan"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "nama": {
+                                                        "type": "string",
+                                                        "example": "dr. Siti"
+                                                    },
+                                                    "spesialis": {
+                                                        "type": "string",
+                                                        "example": "gigi"
+                                                    },
+                                                    "no_telp": {
+                                                        "type": "string",
+                                                        "example": "081234567890"
+                                                    },
+                                                    "email": {
+                                                        "type": "string",
+                                                        "example": "dr.siti@example.com"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Dokter tidak ditemukan"
                     }
                 }
             }
